infrastructure/configs/allow-ingress-sealed-secrets.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-sealed-secrets-ingress
  namespace: flux-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: sealed-secrets-controller
      app.kubernetes.io/name: sealed-secrets
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 8080
          protocol: TCP
